Closes #151
Refactor logic for generateXLSXFile() method